# Page-loader

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
docs/: chocolate cake.html  index.html  index.md
loader/: __init__.py  argparser.py  created.py  engine.py  file_conversion.py  files_creator.py  filesmaker.py  log.py  nameholder.py  names_creator.py  process.py  start_loader.py
loader/scripts/: page_loader.py
tests/: loader_test.py  start_test.py  test_loader.py  test_loader.pyy
tests/fixtures/: example_site.html  python-poetry-org.html
