[tool.poetry]
name = "YuliaZZZ_Page_Loader"
version = "0.2.0"
description = "Page loader"
classifiers = ["Topic :: Utilities"]
authors = ["Zula <zinowiewa@yandex.ru>"]
packages = [
  { include = "loader" },
  ]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
  page-loader = "loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
