[tool.poetry]
name = "YuliaZZZ_Page_Loader"
version = "0.6.0"
description = "Page loader"
classifiers = ["Topic :: Utilities"]
authors = ["Zula <zinowiewa@yandex.ru>"]
packages = [
  { include = "loader" },
  ]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
  page-loader = "loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
